Created a modal or popup for registration

--- a/src/main/webapp/StyleSheet/style.css
+++ b/src/main/webapp/StyleSheet/style.css
@@ -5,3 +5,15 @@
 }
 
 /*End of navbar*/
+
+/*Start of registration*/
+.bg-dark {
+    background-color: #dfe1e6!important;
+}
+
+container-in{
+	background-color:red;
+	
+}
+
+/*End of registration*/
